# rp2040-pico-manual-demo

./: .gitignore  README.md  create_pico_template.sh
coremark_200m/: CMakeLists.txt  README.md  main.c  utils.c  utils.h
coremark_200m/coremark_1_0_1/rp2040/: core_portme.h
dhry_200m/: CMakeLists.txt  dhry_1.c  main.c  utils.c  utils.h
hello_serial/: CMakeLists.txt  README.md  hello_serial.c
hello_serial_200mhz/: CMakeLists.txt  hello_serial_200mhz.c
mini_blink/: CMakeLists.txt  main.c
pico/: create_template.sh
pico/coremark_200m/: CMakeLists.txt  custom_def.h  main.c
pico/coremark_200m/coremark_1_0_1/rp2040/: core_portme.h
pico/dhry_200m/: CMakeLists.txt  README.md  dhry.h  main.c
pico/esp8285_test/: CMakeLists.txt  main.c  wifi_config.h.example
pico/hello_serial/: CMakeLists.txt  README.md  hello_serial.c
pico/mini_blink/: CMakeLists.txt
pico2/: create_template.sh  pico2_pico2w_difference.md
pico2-w/: create_template.sh
pico2-w/coremark_150m/: CMakeLists.txt  README.md  custom_def.h  main.c  utils.h
pico2-w/coremark_150m/coremark_1_0_1/rp2350/: core_portme.c  core_portme.h
pico2-w/cyw43_test/: CMakeLists.txt  README.md  lwipopts.h  main.c  wifi_config.h.example
pico2-w/dhry_150m/: CMakeLists.txt  README.md  custom_def.h  dhry_2.c  main.c  utils.c  utils.h
pico2-w/mini_blink/: CMakeLists.txt  lwipopts.h  main.c
pico2/coremark_150m/: CMakeLists.txt  README.md  main.c  utils.c
pico2/coremark_150m/coremark_1_0_1/: core_main.c
pico2/dhry_150m/: CMakeLists.txt  README.md  custom_def.h  dhry_1.c  main.c
pico2/hello_serial/: CMakeLists.txt  README.md  main.c
pico2/mini_blink/: CMakeLists.txt  main.c
